--- a/.azure-pipelines/temporary-examples-migration.yml
+++ b/.azure-pipelines/temporary-examples-migration.yml
@@ -29,7 +29,7 @@ jobs:
   pool: 
     name: ${{ parameters.BuildAgent }}
   timeoutInMinutes: ${{ parameters.PipelineTimeout }}
-  # steps:
+  steps:
   # - checkout: self
   #   clean: true
   #   persistCredentials: true
